KCPQ_Project/objects/Menu__c.object
<CustomObject>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent menu</label>
        <referenceTo>Menu__c</referenceTo>
        <relationshipLabel>Menu</relationshipLabel>
        <relationshipName>Menu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Menu</label>
    <listViews>
        <fullName>All_Menu</fullName>
        <columns>NAME</columns>
        <columns>Icon__c</columns>
        <columns>Parent_menu__c</columns>
        <columns>Link__c</columns>
        <columns>Order__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Menu</label>
    </listViews>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>